--- a/package.json
+++ b/package.json
@@ -3,7 +3,28 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "npx cypress run --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd"
+    "test": "npx cypress run --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd",
+    "test:al:chrome": "cypress run --spec cypress/e2e/first/adminlogin.cy.js --group adminlogin --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser chrome",
+    "test:c:chrome": "cypress run --spec cypress/e2e/second/cinema.cy.js --group cinema --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser chrome",
+    "test:mb:chrome": "cypress run --spec cypress/e2e/second/moviebooking.cy.js --group moviebooking --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser chrome",
+    "test:chrome": "npm run test:al:chrome | npm run test:c:chrome | npm run test:mb:chrome",
+    "test:al:edge": "cypress run --spec cypress/e2e/first/adminlogin.cy.js --group adminlogin --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser edge",
+    "test:c:edge": "cypress run --spec cypress/e2e/second/cinema.cy.js --group cinema --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser edge",
+    "test:mb:edge": "cypress run --spec cypress/e2e/second/moviebooking.cy.js --group moviebooking --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser edge",
+    "test:edge": "npm run test:al:edge | npm run test:c:edge | npm run test:mb:edge",
+    "test:al:electron": "cypress run --spec cypress/e2e/first/adminlogin.cy.js --group adminlogin --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser electron",
+    "test:c:electron": "cypress run --spec cypress/e2e/second/cinema.cy.js --group cinema --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser electron",
+    "test:mb:electron": "cypress run --spec cypress/e2e/second/moviebooking.cy.js --group moviebooking --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser electron",
+    "test:electron": "npm run test:al:electron | npm run test:c:electron | npm run test:mb:electron",
+    "test:first:chrome": "cypress run --spec cypress/e2e/first --group cinema --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser chrome",
+    "test:second:chrome": "cypress run --spec cypress/e2e/second --group moviebooking --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser chrome",
+    "test:folder:chrome": "npm run test:first:chrome | npm run test:second:chrome",
+    "test:first:edge": "cypress run --spec cypress/e2e/first --group cinema --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser edge",
+    "test:second:edge": "cypress run --spec cypress/e2e/second --group moviebooking --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser edge",
+    "test:folder:edge": "npm run test:first:edge | npm run test:second:edge",
+    "test:first:electron": "cypress run --spec cypress/e2e/first --group cinema --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser electron",
+    "test:second:electron": "cypress run --spec cypress/e2e/second --group moviebooking --record --key d1bdf5cf-b210-4df2-a894-b7385063b0bd --browser electron",
+    "test:folder:electron": "npm run test:first:electron | npm run test:second:electron"
   },
   "keywords": [],
   "author": "Mikhalev Valera",
